Added new Activity for Decompressing

--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -27,6 +27,7 @@ iframe {height:100%;width:100%}
             window.plugins.SoftKeyBoard.show(function () {
               // success
               //alert("sucess")
+              console.log("showing");
             },function () {
               // fail
               alert("fail")
